[package]
name = "nsring"
version = "0.1.0"
edition = "2021"

# List of excluded files
exclude = [
    "target/*",
    "diag/*",
    "img/*",
    "tests/*",
    ".git/*",
    ".vscode/*",
    ".cargo/*",
    ".github/*",
    ".gitignore",
]

[dependencies]

# Overflow check are disabled by default.
[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
opt-level = 3

[profile.test]
overflow-checks = false
opt-level = 3

[profile.bench]
overflow-checks = false
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
