[package]
name = "nsrb"
version = "1.0.0"
edition = "2021"
authors = ["NickelAnge.Studio <rust@nickelange.studio>"]
description = "Nifty Simple Ring Buffer (aka circular buffer) is a no_std library that provides 2 macros to easily create fixed circular buffer on the stack."
license = "MIT"
repository = "https://github.com/NickelAngeStudio/nsrb"
keywords = ["buffer", "circular", "ring", "no_std", "manx"]
categories = ["data-structures", "no-std"]
readme = "README.md"

# List of excluded files
exclude = [
    "target/*",
    "diag/*",
    "img/*",
    "tests/*",
    ".git/*",
    ".vscode/*",
    ".cargo/*",
    ".github/*",
    ".gitignore",
]

[features]
# Remove buffer limit of u16::MAX
no_limit = []

[dependencies]

# Overflow check are disabled by default.
[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
opt-level = 3

[profile.test]
overflow-checks = false
opt-level = 3

[profile.bench]
overflow-checks = false
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
